-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: openjdk8u292, 11, 13
-
Component/s: hotspot
-
b25
-
aarch64
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8226064 | 14 | Dmitrij Pochepko | P4 | Resolved | Fixed | team |
| JDK-8264439 | 11.0.13-oracle | Patric Hedlin | P4 | Resolved | Fixed | b04 |
| JDK-8263883 | 11.0.12 | Dmitrij Pochepko | P4 | Resolved | Fixed | b01 |
A number of instructions has various encoding issues like encoding bugs and missing asserts. Several minor places should be fixed and instruction generation test should be updated where applicable
- backported by
-
JDK-8226064 AARCH64: multiple instructions encoding issues
-
- Resolved
-
-
JDK-8263883 AARCH64: multiple instructions encoding issues
-
- Resolved
-
-
JDK-8264439 AARCH64: multiple instructions encoding issues
-
- Resolved
-
- duplicates
-
JDK-8221765 AARCH64: shift encodings allows shift value more than 31 for 32-bit registers
-
- Closed
-