8222412: AARCH64: multiple instructions encoding issues

Reviewed-by: aph